tests/errors/lex_err08.kt
// unclosed string error
"Unclosed string literal